--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 					</div>
 					<div class="col-md-6">
 						<img class="img-responsive logo-m" style="width:100%" src="assets/images/banner.svg" alt="Hangman Logo">
+						<div id="gameover">
+							
+						</div>
 					</div>
 					<div class="col-md-3">
 						<img class="img-responsive logo-r" style="width:100%" src="assets/images/looneytunes_logo.png" alt="Hangman Logo">
